Se agregan colores fechas

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Estatus de Encuadre</h4>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-4"><label for="fecha_asignacion_gestora" class="form-label">Fecha de asignación Gestora</label><input id="fecha_asignacion_gestora" class="form-control" data-field="fecha_asignacion_gestora" name="fecha_asignacion_gestora" type="date" disabled></div>
-                    <div class="col-md-4"><label for="fecha_asignacion_supervisora" class="form-label">Fecha de asignación (Supervisora/Analista)</label><input id="fecha_asignacion_supervisora" class="form-control" data-field="fecha_asignacion_supervisora" name="fecha_asignacion_supervisora" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_asignacion_gestora" class="form-label">Fecha de asignación Gestora</label><input readonly id="fecha_asignacion_gestora" class="form-control" data-field="fecha_asignacion_gestora" name="fecha_asignacion_gestora" type="date"></div>
+                    <div class="col-md-4"><label for="fecha_asignacion_supervisora" class="form-label">Fecha de asignación (Supervisora/Analista)</label><input readonly id="fecha_asignacion_supervisora" class="form-control" data-field="fecha_asignacion_supervisora" name="fecha_asignacion_supervisora" type="date"></div>
                     <div class="col-md-4"><label for="fecha_realizacion_profesional" class="form-label">Fecha de realización (Profesional)</label><input id="fecha_realizacion_profesional" class="form-control" data-field="fecha_realizacion_profesional" name="fecha_realizacion_profesional" type="date"></div>
                 </div>
                 <div class="row g-3">
@@ -164,8 +164,8 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Cronograma Entrevista Inicial</h4>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-3"><label for="fecha_ideal_min" class="form-label">Fecha ideal mínima</label><input id="fecha_ideal_min" class="form-control" data-field="fecha_ideal_min" name="fecha_ideal_min" type="date" disabled></div>
-                    <div class="col-md-3"><label for="fecha_ideal_max" class="form-label">Fecha ideal máxima</label><input id="fecha_ideal_max" class="form-control" data-field="fecha_ideal_max" name="fecha_ideal_max" type="date" disabled></div>
+                    <div class="col-md-3"><label for="fecha_ideal_min" class="form-label">Fecha ideal mínima</label><input readonly id="fecha_ideal_min" class="form-control" data-field="fecha_ideal_min" name="fecha_ideal_min" type="date" ></div>
+                    <div class="col-md-3"><label for="fecha_ideal_max" class="form-label">Fecha ideal máxima</label><input readonly id="fecha_ideal_max" class="form-control" data-field="fecha_ideal_max" name="fecha_ideal_max" type="date" ></div>
                     <div class="col-md-3"><label for="fecha_real" class="form-label">Fecha real</label><input id="fecha_real" class="form-control" data-field="fecha_real" name="fecha_real" type="date"></div>
                     <div class="col-md-3"><label for="hora" class="form-label">Hora</label><input id="hora" class="form-control" data-field="hora" name="hora" type="time"></div>
                 </div>
@@ -181,7 +181,7 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Entrega</h4>
                 <div class="row g-3">
-                    <div class="col-md-4"><label for="fecha_entrega_producto" class="form-label">Fecha de entrega de producto</label><input id="fecha_entrega_producto" class="form-control" data-field="fecha_entrega_producto" name="fecha_entrega_producto" type="date"></div>
+                    <div class="col-md-4"><label for="fecha_entrega_producto" class="form-label">Fecha de entrega de producto</label><input readonly id="fecha_entrega_producto" class="form-control" data-field="fecha_entrega_producto" name="fecha_entrega_producto" type="date"></div>
                 </div>
             </div>
 
@@ -199,13 +199,13 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Primera Muestra</h4>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-4"><label for="fecha_ideal_inicio_muestra" class="form-label">Fecha ideal inicio muestra</label><input id="fecha_ideal_inicio_muestra" class="form-control" data-field="fecha_ideal_inicio_muestra" name="fecha_ideal_inicio_muestra" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_ideal_inicio_muestra" class="form-label">Fecha ideal inicio muestra</label><input readonly id="fecha_ideal_inicio_muestra" class="form-control" data-field="fecha_ideal_inicio_muestra" name="fecha_ideal_inicio_muestra" type="date" ></div>
                     <div class="col-md-4"><label for="fecha_inicio_muestra" class="form-label">Fecha inicio muestra</label><input id="fecha_inicio_muestra" class="form-control" data-field="fecha_inicio_muestra" name="fecha_inicio_muestra" type="date"></div>
-                    <div class="col-md-4"><label for="fecha_ideal_seguimiento_uso" class="form-label">Fecha ideal seguimiento al uso</label><input id="fecha_ideal_seguimiento_uso" class="form-control" data-field="fecha_ideal_seguimiento_uso" name="fecha_ideal_seguimiento_uso" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_ideal_seguimiento_uso" class="form-label">Fecha ideal seguimiento al uso</label><input readonly id="fecha_ideal_seguimiento_uso" class="form-control" data-field="fecha_ideal_seguimiento_uso" name="fecha_ideal_seguimiento_uso" type="date" ></div>
                 </div>
                 <div class="row g-3 mb-2">
                     <div class="col-md-4"><label for="fecha_seguimiento_real_uso" class="form-label">Fecha de seguimiento real al uso</label><input id="fecha_seguimiento_real_uso" class="form-control" data-field="fecha_seguimiento_real_uso" name="fecha_seguimiento_real_uso" type="date"></div>
-                    <div class="col-md-4"><label for="fecha_ideal_evaluacion_monadica" class="form-label">Fecha ideal de evaluación monádica</label><input id="fecha_ideal_evaluacion_monadica" class="form-control" data-field="fecha_ideal_evaluacion_monadica" name="fecha_ideal_evaluacion_monadica" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_ideal_evaluacion_monadica" class="form-label">Fecha ideal de evaluación monádica</label><input readonly id="fecha_ideal_evaluacion_monadica" class="form-control" data-field="fecha_ideal_evaluacion_monadica" name="fecha_ideal_evaluacion_monadica" type="date" ></div>
                     <div class="col-md-4"><label for="fecha_real_evaluacion_monadica" class="form-label">Fecha real de evaluación monádica</label><input id="fecha_real_evaluacion_monadica" class="form-control" data-field="fecha_real_evaluacion_monadica" name="fecha_real_evaluacion_monadica" type="date"></div>
                 </div>
                 <div class="row g-3">
@@ -218,8 +218,8 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Cronograma Final</h4>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-4"><label for="fecha_ideal_min_final" class="form-label">Fecha ideal mínima entrevista final</label><input id="fecha_ideal_min_final" class="form-control" data-field="fecha_ideal_min_final" name="fecha_ideal_min_final" type="date" disabled></div>
-                    <div class="col-md-4"><label for="fecha_ideal_max_final" class="form-label">Fecha ideal máxima entrevista final</label><input id="fecha_ideal_max_final" class="form-control" data-field="fecha_ideal_max_final" name="fecha_ideal_max_final" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_ideal_min_final" class="form-label">Fecha ideal mínima entrevista final</label><input readonly id="fecha_ideal_min_final" class="form-control" data-field="fecha_ideal_min_final" name="fecha_ideal_min_final" type="date" ></div>
+                    <div class="col-md-4"><label for="fecha_ideal_max_final" class="form-label">Fecha ideal máxima entrevista final</label><input readonly id="fecha_ideal_max_final" class="form-control" data-field="fecha_ideal_max_final" name="fecha_ideal_max_final" type="date" ></div>
                     <div class="col-md-4"><label for="fecha_entrevista_final" class="form-label">Fecha entrevista final</label><input id="fecha_entrevista_final" class="form-control" data-field="fecha_entrevista_final" name="fecha_entrevista_final" type="date"></div>
                 </div>
                 <div class="row g-3">
@@ -235,7 +235,7 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Restitución (Profesionales)</h4>
                 <div class="row g-3">
-                    <div class="col-md-6"><label for="fecha_ideal_maxima_restitucion" class="form-label">Fecha ideal máxima</label><input id="fecha_ideal_maxima_restitucion" class="form-control" data-field="fecha_ideal_maxima_restitucion" name="fecha_ideal_maxima_restitucion" type="date" disabled></div>
+                    <div class="col-md-6"><label for="fecha_ideal_maxima_restitucion" class="form-label">Fecha ideal máxima</label><input readonly id="fecha_ideal_maxima_restitucion" class="form-control" data-field="fecha_ideal_maxima_restitucion" name="fecha_ideal_maxima_restitucion" type="date" ></div>
                     <div class="col-md-6"><label for="fecha_real_restitucion" class="form-label">Fecha real restitución</label><input id="fecha_real_restitucion" class="form-control" data-field="fecha_real_restitucion" name="fecha_real_restitucion" type="date"></div>
                 </div>
             </div>
@@ -244,10 +244,10 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Bono</h4>
                 <div class="row g-3">
-                    <div class="col-md-4"><label for="fecha_ideal_envio_admin" class="form-label">Fecha ideal de envío a administración (Supervisora)</label><input id="fecha_ideal_envio_admin" class="form-control" data-field="fecha_ideal_envio_admin" name="fecha_ideal_envio_admin" type="date" disabled></div>
-                    <div class="col-md-4"><label for="fecha_envio_real_admin" class="form-label">Fecha de envío real a administración (Supervisora)</label><input id="fecha_envio_real_admin" class="form-control" data-field="fecha_envio_real_admin" name="fecha_envio_real_admin" type="date" disabled></div>
-                    <div class="col-md-4"><label for="fecha_ideal_maxima_entrega_bono" class="form-label">Fecha ideal máxima entrega bono (Administración)</label><input id="fecha_ideal_maxima_entrega_bono" class="form-control" data-field="fecha_ideal_maxima_entrega_bono" name="fecha_ideal_maxima_entrega_bono" type="date" disabled></div>
-                    <div class="col-md-4"><label for="fecha_real_entrega_bono" class="form-label">Fecha real entrega bono (Administración)</label><input id="fecha_real_entrega_bono" class="form-control" data-field="fecha_real_entrega_bono" name="fecha_real_entrega_bono" type="date" disabled></div>
+                    <div class="col-md-4"><label for="fecha_ideal_envio_admin" class="form-label">Fecha ideal de envío a administración (Supervisora)</label><input readonly id="fecha_ideal_envio_admin" class="form-control" data-field="fecha_ideal_envio_admin" name="fecha_ideal_envio_admin" type="date" ></div>
+                    <div class="col-md-4"><label for="fecha_envio_real_admin" class="form-label">Fecha de envío real a administración (Supervisora)</label><input readonly id="fecha_envio_real_admin" class="form-control" data-field="fecha_envio_real_admin" name="fecha_envio_real_admin" type="date" ></div>
+                    <div class="col-md-4"><label for="fecha_ideal_maxima_entrega_bono" class="form-label">Fecha ideal máxima entrega bono (Administración)</label><input readonly id="fecha_ideal_maxima_entrega_bono" class="form-control" data-field="fecha_ideal_maxima_entrega_bono" name="fecha_ideal_maxima_entrega_bono" type="date" ></div>
+                    <div class="col-md-4"><label for="fecha_real_entrega_bono" class="form-label">Fecha real entrega bono (Administración)</label><input readonly id="fecha_real_entrega_bono" class="form-control" data-field="fecha_real_entrega_bono" name="fecha_real_entrega_bono" type="date" ></div>
                 </div>
             </div>
             <div class="row">
