--- a/reclutador.html
+++ b/reclutador.html
@@ -366,7 +366,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="reclutador.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/reclutador.js"></script>
 </body>
 
 </html>
