--- a/reclutador.html
+++ b/reclutador.html
@@ -221,6 +221,13 @@
                                                 <input type="text" id="barrio" name="barrio" placeholder="Barrio..."
                                                     required>
 
+                                                <label for="ciudad">Ciudad</label>
+                                                <select id="ciudad" name="ciudad" required>
+                                                    <option value="">Seleccione...</option>
+                                                    <option value="Bogotá">Bogotá</option>
+                                                    <option value="Cali">Cali</option>
+                                                </select>
+
                                                 <label for="nse">NSE</label>
                                                 <input type="number" id="nse" name="nse" min="1" max="6"
                                                     placeholder="NSE..." required>
@@ -233,15 +240,11 @@
                                                 <input type="tel" id="telefono2" name="telefono2" maxlength="10"
                                                     placeholder="Teléfono...2">
 
+                                            </div>
+                                            <div class="full-width-field">
                                                 <label for="fechaNacimientoBebe">Fecha de nacimiento del bebé</label>
                                                 <input type="date" id="fechaNacimientoBebe" name="fechaNacimientoBebe"
                                                     required>
-
-                                            </div>
-                                            <div class="full-width-field">
-                                                <label for="usuarioCrema">Usuario crema antipañalitis</label>
-                                                <input type="text" id="usuarioCrema" name="usuarioCrema"
-                                                    placeholder="Marca de crema antipañalitis..." required>
                                             </div>
                                             <div class="form-actions">
                                                 <button type="submit">Registrar Participante</button>
