--- a/reclutador.html
+++ b/reclutador.html
@@ -32,7 +32,7 @@
                     <label for="proyectos">Filtrar por proyectos</label>
                     <select id="proyectos" name="proyectos" class="selector-filtro">
                         <option value="">NINGUNO</option>
-                        <option value="form1">DERMA LIGH (26)</option>
+                        <option value="1">DERMA LIGH (26)</option>
                     </select>
                 </div>
                 <div class="container mt-5">
@@ -198,18 +198,21 @@
                                                 <label for="nacionalidad">Nacionalidad</label>
                                                 <select id="nacionalidad" name="nacionalidad" required>
                                                     <option value="" selected>Seleccione...</option>
-                                                    <option value="Colombiana">Colombiana</option>
+                                                    <option value="COLOMBIA">Colombiana</option>
                                                 </select>
 
-                                                <label for="edad">Edad</label>
+                                                <label for="fechaNacimiento">Fecha de nacimiento</label>
+                                                <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
+
+                                                <!-- <label for="edad">Edad</label>
                                                 <input type="number" id="edad" name="edad" min="18" max="122"
-                                                    placeholder="Edad..." required>
+                                                    placeholder="Edad..." required> -->
 
                                                 <label for="sexo">Sexo</label>
                                                 <select id="sexo" name="sexo" required>
                                                     <option value="">Seleccione...</option>
-                                                    <option value="Femenino">Femenino</option>
-                                                    <option value="Masculino">Masculino</option>
+                                                    <option value="FEMENINO">Femenino</option>
+                                                    <option value="MASCULINO">Masculino</option>
                                                 </select>
                                             </div>
                                             <div class="form-column right">
@@ -224,8 +227,8 @@
                                                 <label for="ciudad">Ciudad</label>
                                                 <select id="ciudad" name="ciudad" required>
                                                     <option value="">Seleccione...</option>
-                                                    <option value="Bogotá">Bogotá</option>
-                                                    <option value="Cali">Cali</option>
+                                                    <option value="BOGOTÁ">Bogotá</option>
+                                                    <option value="CALI">Cali</option>
                                                 </select>
 
                                                 <label for="nse">NSE</label>
@@ -241,11 +244,11 @@
                                                     placeholder="Teléfono...2">
 
                                             </div>
-                                            <div class="full-width-field">
+                                            <!-- <div class="full-width-field">
                                                 <label for="fechaNacimientoBebe">Fecha de nacimiento del bebé</label>
                                                 <input type="date" id="fechaNacimientoBebe" name="fechaNacimientoBebe"
                                                     required>
-                                            </div>
+                                            </div> -->
                                             <div class="form-actions">
                                                 <button type="submit">Registrar Participante</button>
                                             </div>
