--- a/reclutador.html
+++ b/reclutador.html
@@ -285,6 +285,11 @@
                                                 </select>
                                             </div>
                                         </div>
+                                        <!-- Scroll horizontal superior -->
+                                        <div class="table-responsive-seguimiento table-scroll-top">
+                                            <div class="table-scroll-top-spacer"></div>
+                                            <!-- Solo para mostrar la barra de scroll arriba -->
+                                        </div>
                                         <div class="table-responsive-seguimiento">
                                             <table class="tabla-seguimiento">
                                                 <thead>
@@ -301,7 +306,6 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody id="seguimiento-tbody">
-
                                                 </tbody>
                                             </table>
                                         </div>
@@ -344,6 +348,57 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/reclutador.js"></script>
+    <script>
+    // Sincronizar scroll horizontal arriba y abajo y ajustar el ancho del clon dinámicamente
+    document.addEventListener('DOMContentLoaded', function() {
+        var topScroll = document.querySelector('.table-scroll-top');
+        var mainScroll = document.querySelectorAll('.table-responsive-seguimiento')[1];
+        if (topScroll && mainScroll) {
+            var table = mainScroll.querySelector('table');
+            if (table) {
+                var fakeTable = table.cloneNode(true);
+                fakeTable.style.visibility = 'hidden';
+                fakeTable.style.pointerEvents = 'none';
+                fakeTable.style.margin = '0';
+                fakeTable.style.height = '0';
+                fakeTable.style.minHeight = '0';
+                fakeTable.style.maxHeight = '0';
+                fakeTable.style.position = 'absolute';
+                fakeTable.style.top = '0';
+                fakeTable.style.left = '0';
+                // Función para actualizar el ancho del clon
+                function updateFakeTableWidth() {
+                    fakeTable.style.width = table.offsetWidth + 'px';
+                }
+                updateFakeTableWidth();
+                // Actualizar el ancho cuando cambie el tamaño de la ventana o la tabla
+                window.addEventListener('resize', updateFakeTableWidth);
+                // Si el contenido de la tabla cambia dinámicamente
+                var resizeObserver = new (window.ResizeObserver || window.MutationObserver)(function() {
+                    updateFakeTableWidth();
+                });
+                if (window.ResizeObserver) {
+                    resizeObserver.observe(table);
+                } else {
+                    // Fallback para navegadores antiguos
+                    resizeObserver.observe(table, { childList: true, subtree: true, attributes: true });
+                }
+                topScroll.appendChild(fakeTable);
+                topScroll.style.height = '18px';
+                topScroll.style.position = 'relative';
+                topScroll.style.overflowX = 'auto';
+                topScroll.style.overflowY = 'hidden';
+                // Sincronizar scroll
+                topScroll.addEventListener('scroll', function() {
+                    mainScroll.scrollLeft = topScroll.scrollLeft;
+                });
+                mainScroll.addEventListener('scroll', function() {
+                    topScroll.scrollLeft = mainScroll.scrollLeft;
+                });
+            }
+        }
+    });
+    </script>
 </body>
 
 </html>
